result_table/viap_list/sep10_true-unreach-call.i/output_sep10_true-unreach-call.i.log
/home/pritom/mainDev/VIAP_ARRAY-master/viap/input_program.c: In function ‘main’:
/home/pritom/mainDev/VIAP_ARRAY-master/viap/input_program.c:109:7: error: redefinition of ‘i’
   int i = 0;
       ^
/home/pritom/mainDev/VIAP_ARRAY-master/viap/input_program.c:96:7: note: previous definition of ‘i’ was here
   int i = 0;
       ^
Program Body
{
  int RET;
  RET = 0;
  int _1_FAILED;
  _1_FAILED = 0;
  int x[10];
  int temp;
  int ret;
  int ret2_var;
  int ret5_var;
  int i;
  i = 0;
  while (i < 10)
  {
    x[i] = __VERIFIER_nondet_int();
    i = i + 1;
  }

  int f1_1_RET;
  f1_1_RET = 0;
  long long f1_1_ret;
  f1_1_ret = 0;
  int f1_1_i;
  f1_1_i = 0;
  while (f1_1_i < 10)
  {
    if ((x[f1_1_i] % 2) == 0)
      ret = ret + 1;

    f1_1_i = f1_1_i + 1;
  }

  f1_1_RET = f1_1_ret;
  ret = f1_1_RET;
  temp = x[0];
  x[0] = x[1];
  x[1] = temp;
  int f1_2_RET;
  f1_2_RET = 0;
  long long f1_2_ret;
  f1_2_ret = 0;
  int f1_2_i;
  f1_2_i = 0;
  while (f1_2_i < 10)
  {
    if ((x[f1_2_i] % 2) == 0)
      ret = ret + 1;

    f1_2_i = f1_2_i + 1;
  }

  f1_2_RET = f1_2_ret;
  ret2_var = f1_2_RET;
  temp = x[0];
  int i;
  i = 0;
  while (i < (10 - 1))
  {
    x[i] = x[i + 1];
    i = i + 1;
  }

  x[10 - 1] = temp;
  int f1_3_RET;
  f1_3_RET = 0;
  long long f1_3_ret;
  f1_3_ret = 0;
  int f1_3_i;
  f1_3_i = 0;
  while (f1_3_i < 10)
  {
    if ((x[f1_3_i] % 2) == 0)
      ret = ret + 1;

    f1_3_i = f1_3_i + 1;
  }

  f1_3_RET = f1_3_ret;
  ret5_var = f1_3_RET;
  if ((ret != ret2_var) || (ret != ret5_var))
  {
    _1_FAILED = 1;
  }

  RET = 1;
}

Function Name:
main
Return Type:
int
Input Variables:
{}
Local Variables:
{ f1_2_i:int temp:int ret5_var:int _1_FAILED:int f1_3_i:int ret:int f1_1_i:int i:int ret2_var:int f1_2_RET:int RET:int f1_3_RET:int x:array f1_3_ret:long f1_1_ret:long f1_2_ret:long f1_1_RET:int}
Program Body
{
  int RET;
  RET = 0;
  long long ret;
  ret = 0;
  int i;
  i = 0;
  while (i < 10)
  {
    if ((x[i] % 2) == 0)
      ret = ret + 1;
    else
      ret = ret - 1;

    i = i + 1;
  }

  RET = ret;
}

Function Name:
sep
Return Type:
int
Input Variables:
{ x:array}
Local Variables:
{ i:int ret:long RET:int}

Output in normal notation:
1. Frame axioms:
x1 = x

2. Output equations:
f1_2_i1 = (_N3+0)
f1_3_i1 = (_N5+0)
temp1 = ite(((x=x) and (0=1)),d1array2(x,0,_N1),ite(((x=x) and (0=0)),d1array2(x,1,_N1),d1array2(x,0,_N1)))
ret2_var1 = 0
ret5_var1 = 0
_1_FAILED1 = ite(((ret13(_N5)!=0) or (ret13(_N5)!=0)),1,0)
d1array1(_x1,_x2) = ite(((_x1=x) and (_x2=(10-1))),ite(((x=x) and (0=1)),d1array2(x,0,_N1),ite(((x=x) and (0=0)),d1array2(x,1,_N1),d1array2(x,0,_N1))),d1array10(_x1,_x2,_N4))
ret1 = ret13(_N5)
i1 = (_N4+0)
f1_1_ret1 = 0
f1_2_ret1 = 0
main = 1
f1_3_RET1 = 0
f1_2_RET1 = 0
f1_1_i1 = (_N2+0)
f1_3_ret1 = 0
f1_1_RET1 = 0

3. Other axioms:
d1array2(_x1,_x2,(_n1+1)) = ite(((_x1=x) and (_x2=(_n1+0))),__VERIFIER_nondet_int2(_n1),d1array2(_x1,_x2,_n1))
d1array2(_x1,_x2,0) = d1array(_x1,_x2)
(_N1>=(-(0)+10))
(_n1<_N1) -> ((_n1+0)<10)
ret5((_n2+1)) = ite(((d1array2(x,(_n2+0),_N1)%2)==0),(ret5(_n2)+1),ret5(_n2))
ret5(0) = ret
(_N2>=(-(0)+10))
(_n2<_N2) -> ((_n2+0)<10)
ret8((_n3+1)) = ite(((ite(((x=x) and ((_n3+0)=1)),d1array2(x,0,_N1),ite(((x=x) and ((_n3+0)=0)),d1array2(x,1,_N1),d1array2(x,(_n3+0),_N1)))%2)==0),(ret8(_n3)+1),ret8(_n3))
ret8(0) = 0
(_N3>=(-(0)+10))
(_n3<_N3) -> ((_n3+0)<10)
d1array10(_x1,_x2,(_n4+1)) = ite(((_x1=x) and (_x2=(_n4+0))),d1array10(x,((_n4+0)+1),_n4),d1array10(_x1,_x2,_n4))
d1array10(_x1,_x2,0) = ite(((_x1=x) and (_x2=1)),d1array2(x,0,_N1),ite(((_x1=x) and (_x2=0)),d1array2(x,1,_N1),d1array2(_x1,_x2,_N1)))
(_N4>=(-(0)+9))
(_n4<_N4) -> ((_n4+0)<(10-1))
ret13((_n5+1)) = ite(((ite(((x=x) and ((_n5+0)=(10-1))),ite(((x=x) and (0=1)),d1array2(x,0,_N1),ite(((x=x) and (0=0)),d1array2(x,1,_N1),d1array2(x,0,_N1))),d1array10(x,(_n5+0),_N4))%2)==0),(ret13(_n5)+1),ret13(_n5))
ret13(0) = ret8(_N3)
(_N5>=(-(0)+10))
(_n5<_N5) -> ((_n5+0)<10)

4. Assumption :

5. Assertion :
(_1_FAILED1==0)

Output in normal notation:
1. Frame axioms:
x1(x) = x
d1array1(_x1,_x2) = d1array(_x1,_x2)

2. Output equations:
i1 = (_N6+0)
sep(x) = ret48(_N6,x)
ret1(x) = ret48(_N6,x)

3. Other axioms:
ret48((_n6+1),x) = ite(((d1array(x,(_n6+0))%2)==0),(ret48(_n6,x)+1),(ret48(_n6,x)-1))
ret48(0,x) = 0
(_N6>=(-(0)+10))
(_n6<_N6) -> ((_n6+0)<10)

4. Assumption :

5. Assertion :

Unknown
